--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,6 +25,8 @@ const { pageTitle } = Astro.props as Props;
             href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap"
             rel="stylesheet"
         />
+        <script src="https://kit.fontawesome.com/20d949d22b.js" crossorigin="anonymous"
+        ></script>
     </head>
     <body>
         <Header />
