--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,18 +1,127 @@
 ---
+import logo from '../assets/logo.png?url';
+import Hamburger from './Hamburger.astro';
 import NavigationLink from './NavigationLink.astro';
 const links = [
-    { href: '/about', text: 'About' },
-    { href: '/projects', text: 'Projects' },
-    { href: '/blog', text: 'Blog' },
+    { href: '/about', text: 'About', icon: 'fa-regular fa-address-card' },
+    { href: '/projects', text: 'Projects', icon: 'fa-regular fa-newspaper' },
+    { href: '/blog', text: 'Blog', icon: 'fa-regular fa-pen-to-square' },
 ];
+
+const siteName = 'Ian Hart';
 ---
 
 <nav>
-    <ul>
-        {
-            links.map((link) => {
-                return <NavigationLink link={link} />;
-            })
-        }
-    </ul>
+    <a class="logo-link" href="/">
+        <div class="logo-container">
+            <img src={logo} alt="three mountains" />
+            <h2>{siteName}</h2>
+        </div>
+    </a>
+    <div>
+        <ul class="links">
+            <div class="mobile-logo">
+                <img src={logo} alt="three mountains" />
+            </div>
+
+            {
+                links.map((link) => {
+                    return <NavigationLink link={link} />;
+                })
+            }
+        </ul>
+    </div>
+    <Hamburger />
 </nav>
+
+<style>
+    nav {
+        padding: 0.5rem;
+        display: flex;
+        justify-content: space-between;
+        min-height: 50px;
+    }
+
+    .logo-link {
+        text-decoration: none;
+    }
+
+    .logo-container {
+        display: flex;
+        align-items: center;
+    }
+
+    .logo-container img {
+        width: 40px;
+        height: 40px;
+    }
+
+    .logo-container h2 {
+        color: var(--main-text-color);
+        text-transform: uppercase;
+        margin-left: 0.5rem;
+    }
+
+    ul {
+        list-style-type: none;
+        display: flex;
+    }
+
+    .mobile-logo {
+        display: none;
+    }
+
+    .mobile-logo img {
+        width: 40px;
+        height: 40px;
+    }
+
+    @keyframes fadeIn {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+
+    @media (max-width: 600px) {
+        .mobile-logo {
+            display: flex;
+            justify-content: center;
+            margin: 1rem auto;
+        }
+
+        ul {
+            display: none;
+        }
+        .expanded-links {
+            display: block;
+            position: absolute;
+            right: 2px;
+            top: 50px;
+            width: 300px;
+            padding: 0;
+            border-radius: 8px;
+            min-height: 450px;
+            background-color: var(--main-black-color);
+            animation: fadeIn 0.5s;
+            box-shadow: var(--main-box-shadow);
+        }
+    }
+</style>
+
+<script>
+    const clickOutside = (e: MouseEvent) => {
+        const links = document.querySelector<HTMLUListElement>('.links');
+        const hamburger = document.querySelector<HTMLDivElement>('.hamburger');
+
+        const target = e.target as HTMLElement;
+
+        if (!links?.contains(target) && hamburger !== target) {
+            links?.classList.remove('expanded-links');
+        }
+    };
+
+    window.addEventListener('click', clickOutside);
+</script>
