--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ import '../styles/global.css';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
-interface Props {
+export interface Props {
     pageTitle: string;
 }
 
@@ -39,6 +39,7 @@ const { pageTitle } = Astro.props as Props;
 <style>
     .main {
         flex: 1 0 auto;
+        background: var(--main-bg-color);
     }
 
     code {
