feat: work on about page

--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,9 +1,9 @@
 ---
 const socials = [
     {
-        text: 'threads',
-        href: 'https://www.threads.net/@ianhart',
-        icon: 'fa-brands fa-threads',
+        text: 'Github',
+        href: 'https://www.github.com/ianahart',
+        icon: 'fa-brands fa-github',
     },
     { text: 'X', href: 'https://twitter.com/ianhart720', icon: 'fa-brands fa-x-twitter' },
     {
