--- a/src/components/ImageModal.astro
+++ b/src/components/ImageModal.astro
@@ -44,6 +44,16 @@ const { src, alt } = Astro.props as Props;
         height: 150px;
         border-radius: 3px;
         cursor: pointer;
+        transform-origin: 0 0;
+        margin: 0 0.5rem;
+        transition: transform 0.5s, filter 1.5s ease-in-out;
+        transform-origin: center center;
+        filter: brightness(50%);
+    }
+
+    .image:hover {
+        filter: brightness(100%);
+        transform: scale(1.2);
     }
 
     .hidden {
