feat: center about me content

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -69,6 +69,7 @@ import meSnowboarding from '../assets/snowboard_bg.jpeg?url';
     }
 
     .about-me {
+        margin: 0 auto;
         padding: 0.5rem;
         --s: 50px;
         --t: 5px;
@@ -92,7 +93,8 @@ import meSnowboarding from '../assets/snowboard_bg.jpeg?url';
     }
 
     .about-me p {
-        margin: 1rem 0;
+        margin: 1rem auto;
+        text-align: center;
         line-height: 1.8;
     }
 
