fix: zoom on images

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -42,6 +42,7 @@ import meSnowboarding from '../assets/snowboard_bg.jpeg?url';
     .img-container {
         display: flex;
         justify-content: center;
+        overflow: hidden;
     }
 
     .about-container {
