feat: add animated underlines on hover for links

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -76,7 +76,7 @@ const siteName = 'Ian Hart';
         height: 40px;
     }
 
-    @keyframes fadeIn {
+    @keyframes fade {
         0% {
             opacity: 0;
         }
@@ -105,7 +105,7 @@ const siteName = 'Ian Hart';
             border-radius: 8px;
             min-height: 450px;
             background-color: var(--main-black-color);
-            animation: fadeIn 0.5s;
+            animation: fade 0.5s;
             box-shadow: var(--main-box-shadow);
         }
     }
