--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -81,7 +81,7 @@ const alternateCase = (name: string) => {
         }
 
         .project-heading:hover h2 {
-            background-color: var(--main-blue-color);
+            background: linear-gradient(to bottom, #12205c, rgba(31, 241, 191, 1));
             text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9,
                 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1),
                 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2),
