feat: add animation to about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -70,6 +70,7 @@ import meSnowboarding from '../assets/snowboard_bg.jpeg?url';
     }
 
     .about-me {
+        animation: slideUp 0.75s;
         margin: 0 auto;
         padding: 0.5rem;
         --s: 50px;
@@ -82,6 +83,18 @@ import meSnowboarding from '../assets/snowboard_bg.jpeg?url';
                 calc(100% - var(--s)) calc(100% - var(--s)),
             linear-gradient(#000 0 0) content-box;
         transition: 0.4s;
+    }
+
+    @keyframes slideUp {
+        0% {
+            opacity: 0;
+            transform: translateY(100px);
+        }
+
+        100% {
+            opacity: 1;
+            transform: translateY(0px);
+        }
     }
 
     header h1 {
