--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,4 +1,5 @@
 ---
+import 'atropos/css';
 import Skill from './Skill.astro';
 export interface Props {
     skills: { text: string; icon: string }[];
@@ -8,12 +9,20 @@ export interface Props {
 const { skills, className } = Astro.props as Props;
 ---
 
-<div class=`skills ${className}`>
-    {
-        skills.map((skill) => {
-            return <Skill skill={skill} />;
-        })
-    }
+<div class="atropos my-atropos">
+    <div class="atropos-scale">
+        <div class="atropos-rotate">
+            <div class="atropos-inner">
+                <div class=`skills ${className}`>
+                    {
+                        skills.map((skill) => {
+                            return <Skill skill={skill} />;
+                        })
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <style>
@@ -48,6 +57,20 @@ const { skills, className } = Astro.props as Props;
 </style>
 
 <script>
+    import Atropos from 'atropos';
+    const createAtropos = (className: string) => {
+        const atroposes = document.querySelectorAll(className);
+        atroposes.forEach((atropos) => {
+            Atropos({
+                el: atropos as HTMLElement,
+                rotateXMax: 7,
+                rotateYMax: 7,
+            });
+        });
+    };
+
+    createAtropos('.my-atropos');
+
     const frontendSkillsEl = document.querySelector<HTMLDivElement>('.frontend');
     const backendSkillsEl = document.querySelector<HTMLDivElement>('.backend');
 
