feat: add annoying cursor effect

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -55,3 +55,9 @@ const { pageTitle } = Astro.props as Props;
             Bitstream Vera Sans Mono, Courier New, monospace;
     }
 </style>
+
+<script>
+    // @ts-ignore
+    import { followingDotCursor } from 'cursor-effects';
+    new followingDotCursor({ color: ['#323232a6'] });
+</script>
