--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,6 +40,7 @@ const pageTitle = 'Home';
             display: flex;
             justify-content: center;
             max-width: 1200px;
+            margin: 0 auto;
         }
 
         .skills-container {
@@ -64,11 +65,10 @@ const pageTitle = 'Home';
         h2 {
             text-transform: uppercase;
             text-align: center;
-            font: 900 80px/1 'Source Sans Pro', Arial, sans-serif;
+            font-family: 'Permanent Marker', cursive;
+            font-size: 80px;
             color: #dadada;
             text-align: center;
-            margin-top: 1rem;
-            letter-spacing: -3px;
             text-shadow: 0 1px 0 hsl(174, 5%, 80%), 0 2px 0 hsl(174, 5%, 75%),
                 0 3px 0 hsl(174, 5%, 70%), 0 4px 0 hsl(174, 5%, 66%),
                 0 5px 0 hsl(174, 5%, 64%), 0 6px 0 hsl(174, 5%, 62%),
