--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;700&family=Permanent+Marker&display=swap');
 :root {
   --main-bg-color: linear-gradient(
     to right top,
