feat: add spam filter for form

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -1,6 +1,12 @@
 <div class="form-container">
     <h3>Get In Touch</h3>
-    <form name="contact" method="POST" data-netlify="true" id="form">
+    <form
+        name="contact"
+        method="POST"
+        data-netlify="true"
+        id="form"
+        netlify-honeypot="bot-field"
+    >
         <div class="input-group">
             <label for="name">Your Name:</label>
             <input placeholder="Name..." type="text" id="name" name="name" />
