--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -7,6 +7,7 @@
         id="form"
         netlify-honeypot="bot-field"
     >
+        <input type="hidden" name="contact" value="contact" />
         <div class="input-group">
             <label for="name">Your Name:</label>
             <input placeholder="Name..." type="text" id="name" name="name" />
