--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -1,7 +1,7 @@
 <div class="form-container">
     <h3>Get In Touch</h3>
     <form
-        name="contact"
+        name="me"
         method="POST"
         data-netlify="true"
         id="form"
@@ -12,7 +12,7 @@
                 Don’t fill this out if you’re human: <input name="bot-field" />
             </label>
         </p>
-        <input type="hidden" name="contact" value="contact" />
+        <input type="hidden" name="me" value="me" />
         <div class="input-group">
             <label for="name">Your Name:</label>
             <input placeholder="Name..." type="text" id="name" name="name" />
