feat: remove post method

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -1,18 +1,12 @@
 <div class="form-container">
     <h3>Get In Touch</h3>
-    <form
-        name="me"
-        method="POST"
-        data-netlify="true"
-        id="form"
-        netlify-honeypot="bot-field"
-    >
+    <form name="contact" data-netlify="true" id="form" netlify-honeypot="bot-field">
         <p class="hidden">
             <label>
                 Don’t fill this out if you’re human: <input name="bot-field" />
             </label>
         </p>
-        <input type="hidden" name="me" value="me" />
+        <input type="hidden" name="contact" value="feedback" />
         <div class="input-group">
             <label for="name">Your Name:</label>
             <input placeholder="Name..." type="text" id="name" name="name" />
