--- a/src/pages/projects/[project].astro
+++ b/src/pages/projects/[project].astro
@@ -114,7 +114,7 @@ const project = projects.find((project) => project.slug === param);
 
             .image-container {
                 margin: 0 auto;
-                height: 500px;
+                min-height: 500px;
                 width: 750px;
                 margin-bottom: 4rem;
             }
