feat: add first blog post

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,6 +39,7 @@ const { pageTitle } = Astro.props as Props;
         />
         <script src="https://kit.fontawesome.com/20d949d22b.js" crossorigin="anonymous"
         ></script>
+        <link href="/themes/prism-duotone-sea.css" rel="stylesheet" />
     </head>
     <body>
         <Header />
