--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,16 +1,43 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import BlogPost from '../components/BlogPost.astro';
 const pageTitle = 'Blog';
+const allPosts = await Astro.glob('../pages/posts/*.md');
 ---
 
 <Layout pageTitle={pageTitle}>
-    <h2>Blog coming soon</h2>
+    <div class="blog-posts">
+        <ul>
+            {
+                allPosts.map((post) => {
+                    return (
+                        <BlogPost
+                            imageSrc={post.frontmatter.image.url}
+                            url={post.url!}
+                            title={post.frontmatter.title}
+                            description={post.frontmatter.description}
+                        />
+                    );
+                })
+            }
+        </ul>
+    </div>
 </Layout>
 
 <style>
+    .blog-posts {
+        margin-top: 5rem;
+        display: flex;
+        justify-content: center;
+    }
+
     h2 {
         font-size: 4rem;
         text-align: center;
         color: var(--main-text-color);
+    }
+
+    ul {
+        padding: 0;
     }
 </style>
