feat: add new blog post

--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -32,6 +32,7 @@ const { imageSrc, title, url, description } = Astro.props as Props;
         text-decoration: none;
         color: var(--main-text-color);
         display: flex;
+        justify-content: space-between;
     }
 
     li {
