fix: change font-family to Manrope on label tags

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -69,6 +69,7 @@
     }
 
     .input-group label {
+        font-family: 'Manrope', sans-serif;
         text-transform: uppercase;
         font-size: 0.9rem;
         color: var(--main-text-color);
