feat: add meliorem demo video to projects page

--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -30,6 +30,7 @@ const { href, icon, text } = Astro.props;
         text-align: center;
         font-weight: bold;
         min-width: 60px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: var(--main-text-color);
         background: var(--main-black-color);
         padding: 0.5rem;
